--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -7,15 +7,7 @@
 
 <title>Rafael Minossi | Desenvolvedor Fullstack</title>
 
-<!--[if lt IE 9]>
-<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-
-<!-- Fichiers CSS -->
 <link rel="stylesheet" href="files/reset.css">
-<!--[if lt IE 9]> 
-	<link rel="stylesheet" href="css/cv.css" media="screen">
-<![endif]-->
 <link rel="stylesheet" media="screen and (max-width:480px)" href="files/mobile.css">
 <link rel="stylesheet" media="screen and (min-width:481px)" href="files/cv.css">
 <link rel="stylesheet" media="print" href="files/print.css">
@@ -32,29 +24,10 @@
 				</hgroup>
 
 				<figure>
-					<img src="files/avatar.jpg" alt="Sheldon COOPER">
+					<img src="files/avatar.jpg" alt="Rafael Minossi photo">
 				</figure>
 		</div>
 	</header>
-	
-	<!-- Contact -->
-	<section class="contactform clearfix">
-		<div class="container_16">
-			<h3>Contactez-moi</h3>
-			<p>Remplissez le formulaire ci-dessous afin de m'envoyer un message. Je vous répondrais dans les plus bref délai. 
-			<br><em>Tous les champs sont requis.</em></p>
-			<form novalidate="novalidate" method="post" action="#" name="contact" class="grid_16">
-				<p class="grid_10"><textarea name="message" placeholder="Votre message" class="required"></textarea></p>
-				<p class="grid_6">
-					<input name="nom" placeholder="Nom - Prénom" class="required" type="text">
-					<input name="email" placeholder="Adresse email" class="required" type="email">	
-					<input name="envoi" value="Envoyer le message" class="required" type="submit">
-					<span class="messageform"></span>
-				</p>
-			</form>
-		</div>
-	</section>
-	
 	<!-- Corps -->
 	<section role="main" class="container_16 clearfix">
 		<div class="grid_16">
@@ -69,7 +42,7 @@
 			
 			<!-- Compétences -->
 			<div class="grid_8 competences">
-				<h3>Competencias</h3>
+				<h3>Competências</h3>
 				<ul class="barres">
 					<li data-skills="80">HTML / CSS<span style="width: 80%;"></span></li>
 					<li data-skills="80">JavaScript<span style="width: 80%;"></span></li>
@@ -200,9 +173,7 @@
 <!-- Scripts JavaScript -->
 <script src="files/jquery-1.js"></script>
 <script src="files/validate.js"></script>
-<!--[if lt IE 9]>
-<script src="scripts/placeholder.js"></script>
-<![endif]-->
 <script src="files/plugins.js"></script>
 
-</body></html>
+</body>
+</html>
