--- a/penz/index.html
+++ b/penz/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="topo" style="height: 600px">
         <div class="transp" style="background-color: #0e1a2194;height: 600px;width: 100%">
-            <div class="offset-8 mt-3  row">
+            <div class="offset-8 d-none d-md-block  mt-3  row">
                 <h5 style="color: rgba(255, 255, 255, 0.568); ">Contato: (51) 3333-3333 / (51) 99999-9999</h5>
             </div>
             <nav class="navbar navbar-expand-lg navbar-dark static-top">
@@ -30,7 +30,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="row collapse navbar-collapse ml-5" id="navbarResponsive">
+                    <div class="row collapse navbar-collapse offset-1" id="navbarResponsive">
                         <ul class="navbar-nav ml-0 w-100">
                             <li class="nav-item active">
                             <a class="nav-link" href="#">Todos os imóveis
@@ -49,7 +49,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="nav-item active offset-2 mt-5 mt-md-0">
+                    <div class="nav-item active mt-5 mt-md-0">
                         <a class="nav-link" style="color: #17284e; border: #17284e solid 2px;"" href="#">Anuncie seu imóvel
                             <span class="sr-only">(current)</span>
                         </a>
