alteraçao no slider

--- a/penz/index.html
+++ b/penz/index.html
@@ -50,7 +50,7 @@
                         </ul>
                     </div>
                     <div class="nav-item active mt-5 mt-md-0">
-                        <a class="nav-link" style="color: #17284e; border: #17284e solid 2px;"" href="#">Anuncie seu imóvel
+                        <a class="nav-link" style="color: #fff; border: #fff solid 3px;"" href="#">Anuncie seu imóvel
                             <span class="sr-only">(current)</span>
                         </a>
                     </div>
