alteraçao no slider

--- a/penz/index.html
+++ b/penz/index.html
@@ -32,18 +32,18 @@
                     </button>
                     <div class="row collapse navbar-collapse offset-1" id="navbarResponsive">
                         <ul class="navbar-nav ml-0 w-100">
-                            <li class="nav-item active">
-                            <a class="nav-link" href="#">Todos os imóveis
+                            <li class="nav-item active mt-3">
+                            <a class="nav-link" href="#"><i class="fas fa-home"></i> Todos os imóveis
                                     <span class="sr-only">(current)</span>
                                 </a>
                             </li>
-                            <li class="nav-item active">
-                            <a class="nav-link" href="#">Lançamentos
+                            <li class="nav-item active mt-3">
+                            <a class="nav-link" href="#"><i class="fab fa-hotjar"></i> Lançamentos
                                     <span class="sr-only">(current)</span>
                             </a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">#sigatorres
+                                <a class="nav-link" href="#"><img src="src/imgs/siga.png" width="130px" height="50px" alt="">
                                         <span class="sr-only">(current)</span>
                                 </a>
                             </li>
