alteraçao no slider

--- a/penz/index.html
+++ b/penz/index.html
@@ -16,8 +16,8 @@
     <script src="src/js/penz.js"></script>
 </head>
 <body>
-    <div class="topo" style="height: 600px">
-        <div class="transp" style="background-color: #0e1a2194;height: 600px;width: 100%">
+    <div class="topo" style="height: 640px">
+        <div class="transp" style="background-color: #0e1a2194;height: 640px;width: 100%">
             <div class="offset-8 d-none d-md-block  mt-3  row">
                 <h5 style="color: rgba(255, 255, 255, 0.568); ">Contato: (51) 3333-3333 / (51) 99999-9999</h5>
             </div>
@@ -131,12 +131,10 @@
     </div>
     <div class="container">
         <div class="destaques mx-0 mx-md-0">
-                <div class="row my-3 mx-0 session-title" >
-                    <h2 class="col-10 col-md-10 pl-0" style="color: #17284e; font-weight: bold">Lançamentos</h2>
-                    <button class="col-1 p-1 d-md-none d-block" style="float: right; border: #17284e solid 3px; background-color: white; color: #17284e; font-weight:900; font-size: 120%">+</button>
-                    <button class="col-2 d-none d-md-block" style="float: right; border: #17284e solid 3px; background-color: white; color: #17284e; font-weight:900; font-size: 120%">Ver todos</button>
+                <div class="row mt-3 mx-0 session-title" >
+                    <h3 class="col-10 col-md-10 pl-0" style="color: #17284e; font-weight: bold">Lançamentos</h3>
                 </div> 
-                <hr>
+                <hr class="mt-0">
                 <div id="destaquesCarousel" class="carousel slide container carousel-fade" data-ride="carousel">
                         <ol class="carousel-indicators">
                         <li data-target="#destaquesCarousel" data-slide-to="0" class="active"></li>
@@ -182,13 +180,12 @@
                         </a>
                     </div>
         </div>
+        <br>
         <div class="venda mx-0 mx-md-0">
-            <div class="row my-3 mx-0 session-title" >
-                    <h2 class="col-10 col-md-10 pl-0" style="color: #17284e; font-weight: bold">Imóveis à venda</h2>
-                    <button class="col-1 p-1 d-md-none d-block" style="float: right; border: #17284e solid 3px; background-color: white; color: #17284e; font-weight:900; font-size: 120%">+</button>
-                    <button class="col-2 d-none d-md-block" style="float: right; border: #17284e solid 3px; background-color: white; color: #17284e; font-weight:900; font-size: 120%">Ver todos</button>
+            <div class="row mt-3 mx-0 session-title" >
+                    <h3 class="col-10 col-md-10 pl-0" style="color: #17284e; font-weight: bold">Destaques</h3>
             </div> 
-            <hr>
+            <hr class="mt-0">
             <div class="container text-center my-3">
                 <div class="row mx-auto my-auto">
                     <div id="vendasCarousel" class="carousel imoveisCarousel slide w-100" data-ride="carousel">
