--- a/landing/index.html
+++ b/landing/index.html
@@ -110,45 +110,13 @@
 	</section>
 	<!--================End About Us Area =================-->
 
-	<!--================Em breve =================
-	<section class="upcoming_games_area">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="main_title">
-						<h1>Em breve</h1>
-					</div>
-				</div>
-			</div>
-			<div class="row text-center">
-				<div class="col-lg-3 offset-lg-3 offset-md-6 col-md-6 col-sm-6">
-					<div class="new_games_item">
-						<img src="img/b_map1.png" alt="">
-						<div class="upcoming_title">
-							<h3><a href="games.html">Serviços Premium</a></h3>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6 col-sm-6">
-					<div class="new_games_item">
-						<img src="img/b_map2.png" alt="">
-						<div class="upcoming_title">
-							<h3><a href="games.html">Aplicativo Mobile (Android / IOS)</a></h3>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>-->
-	<!--================End Upcoming Games Area =================-->
-
 	<!--================Start Recent Update Area =================-->
 	<section class="recent_update_area section_gap_top" style="margin-top: 70px">
 		<div class="container">
 			<div class="recent_update_inner">
 				<ul class="nav nav-tabs" id="myTab" role="tablist">
 					<li class="nav-item">
-						<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
+						<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home2" role="tab" aria-controls="home" aria-selected="true">
 							Para os logistas
 						</a>
 					</li>
@@ -160,7 +128,7 @@
 					</li>
 				</ul>
 				<div class="tab-content" id="myTabContent">
-					<div class="tab-pane fade active show" id="home" role="tabpanel" aria-labelledby="home-tab">
+					<div class="tab-pane fade active show" id="home2" role="tabpanel" aria-labelledby="home-tab">
 						<div class="row recent_update_text">
 							<div class="col-lg-12">
 								<div class="section_content">
