--- a/landing/index.html
+++ b/landing/index.html
@@ -1,33 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
 	<title>Portal Codige</title>
-	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="vendors/linericon/style.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
-	<link rel="stylesheet" href="vendors/animate-css/animate.css">
 	<link rel="stylesheet" href="vendors/flaticon/flaticon.css">
-	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-	<!--================Header Menu Area =================-->
 	<header class="header_area">
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
-					<!-- Brand and toggle get grouped for better mobile display -->
 					<a class="navbar-brand logo_h" href="index.html"><img src="img/codige.png" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +25,6 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav justify-content-center">
 							<li class="nav-item active"><a class="nav-link" href="#home">Início</a></li>
@@ -52,9 +41,6 @@
 			</nav>
 		</div>
 	</header>
-	<!--================Header Menu Area =================-->
-
-	<!--================Home Banner Area =================-->
 	<section id="home" class="home_banner_area">
 		<div class="banner_inner">
 			<div class="container">
@@ -85,9 +71,6 @@
 			</div>
 		</div>
 	</section>
-	<!--================End Home Banner Area =================-->
-
-	<!--================Start About Us Area =================-->
 	<section id="about" class="about_us_area section_gap_top">
 		<div class="container">
 			<div class="row about_content align-items-center">
@@ -108,9 +91,6 @@
 			</div>
 		</div>
 	</section>
-	<!--================End About Us Area =================-->
-
-	<!--================Start Recent Update Area =================-->
 	<section class="recent_update_area section_gap_top" style="margin-top: 70px">
 		<div class="container">
 			<div class="recent_update_inner">
@@ -160,9 +140,6 @@
 			</div>
 		</div>
 	</section>
-	<!--================End Recent Update Area =================-->
-
-	<!--================ Start Pricing Plans Area ================-->
 	<section id="plains" class="pricing_area section_gap">
 		<div class="container">
 			<div class="row">
@@ -225,10 +202,6 @@
 			</div>
 		</div>
 	</section>
-	<!--================ End Pricing Plans Area ================-->
-
-
-	<!--================ Start Frequently Asked Questions Area ================-->
 	<section id="faq" class="frequently_area">
 		<div class="container">
 			<div class="row">
@@ -244,9 +217,6 @@
 			</div>
 		</div>
 	</section>
-	<!--================ End Frequently Asked Questions Area ================-->
-
-	<!--================Footer Area =================-->
 	<footer class="footer_area">
 		<div class="container">
 			<div class="row single-footer-widget">
@@ -264,27 +234,9 @@
 			</div>
 		</div>
 	</footer>
-	<!--================End Footer Area =================-->
-
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	
 	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/popper.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/stellar.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
-	<script src="vendors/isotope/imagesloaded.pkgd.min.js"></script>
-	<script src="vendors/isotope/isotope-min.js"></script>
-	<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="vendors/counter-up/jquery.waypoints.min.js"></script>
-	<script src="vendors/counter-up/jquery.counterup.min.js"></script>
-	<script src="js/mail-script.js"></script>
-	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-	<script src="js/gmaps.min.js"></script>
-	<script src="js/theme.js"></script>
 </body>
 
 </html>
