--- a/landing/index.html
+++ b/landing/index.html
@@ -31,7 +31,6 @@
 							<li class="nav-item"><a class="nav-link" href="#about">Sobre a Codige</a></li>
 							<li class="nav-item"><a class="nav-link" href="#plains">Planos</a></li>
 							<li class="nav-item"><a class="nav-link" href="#faq">Faq</a>
-							<li class="nav-item"><a class="nav-link" href="#contact">Contato</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="#" class="primary_btn">Acessar</a></li>
@@ -71,7 +70,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="about" class="about_us_area section_gap_top">
+	<section id="about" class="about_us_area section_gap pb-5">
 		<div class="container">
 			<div class="row about_content align-items-center">
 				<div class="col-lg-6">
@@ -91,7 +90,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="recent_update_area section_gap_top" style="margin-top: 70px">
+	<section class="recent_update_area section_gap py-5">
 		<div class="container">
 			<div class="recent_update_inner">
 				<ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -202,7 +201,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="faq" class="frequently_area">
+	<section id="faq" class="frequently_area section_gap_top">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -213,7 +212,11 @@
 				</div>
 			</div>
 			<div class="row frequent_inner mt-5 mb-5">
+				<div class="container">
 				<h3>Acesse nosso FAQ <a href="https://codige.com.br/#/faqs">aqui</a> para tirar quaisquer dúvidas restantes sobre o Codige</h3>
+				<br>
+				<img src="img/faq.png" alt="" srcset="">
+			</div>
 			</div>
 		</div>
 	</section>
@@ -234,9 +237,9 @@
 			</div>
 		</div>
 	</footer>
-	
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/theme.js"></script>
 </body>
 
 </html>
