alteraçao da pagina

--- a/penz/index.html
+++ b/penz/index.html
@@ -35,8 +35,9 @@
                                 <li class="nav-item active mt-md-2">
                                     <a class="nav-link" href="#">
                                         <div class="row">
-                                            <i class="fas fa-home offset-5"></i>
+                                            <i class="fas fa-home d-none d-md-block offset-md-5"></i>
                                         </div>
+                                        <i class="fas fa-home d-inline d-md-none"></i>
                                         Todos os imóveis
                                         <span class="sr-only">(current)</span>
                                     </a>
@@ -44,8 +45,9 @@
                                 <li class="nav-item active mt-md-2">
                                     <a class="nav-link" href="#">
                                         <div class="row">
-                                            <i class="fas fa-star offset-5"></i>
+                                            <i class="fas fa-star d-none d-md-block offset-md-5"></i>
                                         </div>
+                                        <i class="fas fa-star d-inline d-md-none"></i>
                                         Lançamentos
                                         <span class="sr-only">(current)</span>
                                     </a>
@@ -57,7 +59,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="nav-item active mt-5 mt-md-0">
+                        <div class="nav-item active mt-5 mt-md-0 offset-md-0 offset-2">
                             <a class="nav-link" style="color: #fff; border: #fff solid 3px;" " href=" #"=" #""="#" "">Anuncie seu imóvel
                                 <span class="sr-only">(current)</span>
                             </a>
