alteraçao da pagina

--- a/penz/index.html
+++ b/penz/index.html
@@ -349,9 +349,34 @@
         }
     });
 </script>
-<footer class="footer">
+<footer class="footer_area">
     <div class="container">
-        <h1 class="text-muted" style="text-align: center; padding-top: 25px">FOOTER.</h1>
+        <div class="row single-footer-widget">
+            <div class="col-lg-8 col-md-6 col-sm-12">
+                <div class="copy_right_text">
+                    <p>Copyright &copy;<script>
+                            document.write(new Date().getFullYear());
+                        </script>
+                        Penz Imóveis
+                        <br class="d-block d-md-none">
+                        | Todos os direitos reservados |
+                        <br class="d-block d-md-none">
+                        Desenvolvido por
+                        <a href="https://www.github.com/rminossi" style="color: white" target="_blank">@rminossi</a>
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="social_widget">
+                    <a href="https://facebook.com/" target="_blank">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="https://instagram.com" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </footer>
 
