alteraçao da pagina

--- a/penz/index.html
+++ b/penz/index.html
@@ -70,7 +70,7 @@
                     <h3 class="ml-3 pt-2" style="color: whitesmoke">Pesquise seu imóvel</h3>
                     <div class="tab-content mt-3 mb-3">
                         <div id="home" class="tab-pane in active">
-                            <form action="/action_page.php" class="container">
+                            <form action="#" class="container">
                                 <div class="row p-2">
                                     <select name="finalidade" id="finalidade" class="mx-1 col-3">
                                         <option value="0">Finalidade</option>
@@ -97,11 +97,21 @@
                                         Pesquisar</button>
                                 </div>
                             </form>
+                            <div class="row pt-2 offset-4" style="color: white; font-size:20px">Ou procure pelo código</div>
+                            <form action="#" class="container">
+                                <div class="row pt-4 offset-4">
+                                    <input class="select px-3" type="text" name="codigo" id="codigo" placeholder="">
+                                    <button class="col-md-1 mx-0">
+                                        <i class="fas fa-search"></i>
+                                    </button>
+                                </div>
+                            </form>
+
                         </div>
 
                     </div>
                 </div>
-                <div style="background-color: #0e1a2194; margin-top: 30%; margin-left: 5%;margin-right: 5%; height: auto;" class="d-block d-md-none pb-2">
+                <div style="background-color: #0e1a2194; margin-top: 10%; margin-left: 5%;margin-right: 5%; height: auto;" class="d-block d-md-none pb-2">
                     <h5 class="ml-3 pt-2" style="color: whitesmoke">Pesquise seu imóvel</h5>
                     <div class="tab-content mt-3 mb-3">
                         <div id="home" class="tab-pane in active">
@@ -369,10 +379,10 @@
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="social_widget">
                     <a href="https://facebook.com/" target="_blank">
-                        <i class="fa fa-facebook"></i>
+                        <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="https://instagram.com" target="_blank">
-                        <i class="fa fa-twitter"></i>
+                    <a href="https://instagran.com" target="_blank">
+                        <i class="fab fa-instagram"></i>
                     </a>
                 </div>
             </div>
