alteraçao da pagina

--- a/penz/index.html
+++ b/penz/index.html
@@ -92,15 +92,15 @@
                                         <option value="3">Aluguel Temporada</option>
                                         <option value="4">Venda</option>
                                     </select>
-                                    <button class="col-md-3 mx-1">
+                                    <button class=" pl-0 col-md-3 mx-1">
                                         <i class="fas fa-search"></i>
                                         Pesquisar</button>
                                 </div>
                             </form>
-                            <div class="row pt-2 offset-4" style="color: white; font-size:20px">Ou procure pelo código</div>
                             <form action="#" class="container">
-                                <div class="row pt-4 offset-4">
-                                    <input class="select px-3" type="text" name="codigo" id="codigo" placeholder="">
+                                <div class="row pt-4 offset-3">
+                                    <h6 style="color:white">Buscar pelo código</h6>
+                                    <input class="select ml-3 px-3 w-25" type="text" name="codigo" id="codigo" placeholder="">
                                     <button class="col-md-1 mx-0">
                                         <i class="fas fa-search"></i>
                                     </button>
