--- a/penz/index.html
+++ b/penz/index.html
@@ -61,12 +61,7 @@
                             </ul>
                         </div>
                         <div class="nav-item active mt-5 mt-md-0 offset-md-0 offset-2">
-                            <a class="nav-link animated infinite pulse delay-3s" style="background-color: #133448; color: #fff; border: #fff solid 3px;" " href=" #"=" #""="#" "">Anuncie seu imóvel
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </div>
-                        <div class="nav-item active mt-5 mt-md-0 offset-md-0 offset-2">
-                            <a class="nav-link animated infinite bounce delay-3s" style="background-color: #133448; color: #fff; border: #fff solid 3px;" " href=" #"=" #""="#" "">Anuncie seu imóvel
+                            <a class="nav-link animated infinite pulse delay-0s" style="#133448; color: #fff; border: #fff solid 3px;" " href=" #"=" #""="#" "">Anuncie seu imóvel
                                 <span class="sr-only">(current)</span>
                             </a>
                         </div>
