--- a/penz/detalhes.html
+++ b/penz/detalhes.html
@@ -205,7 +205,7 @@
 
       <h4 class="mt-4" style="color:#1F2B43; font-size: 24px; font-weight:bold">Informações do imóvel</h4>
       <div class="row">
-        <div class="col-6 mt-4">
+        <div class="col-12 col-md-6 mt-4">
           <h5 style="color:#1F2B43; font-size: 20px; font-weight:bold">Descrição</h5>
           <p class="mt-3" style="color: grey; font-size:14px">PENZ CORRETORA DE IMÓVEIS VENDE, em Torres-RS, próximo ao Rio Mammpituba, Apartamento 03 dormitórios sendo um suíte, duas sacadas, vaga de garagem individual fechada, LINDISSÍMA VISTA PARA O MAR, CONTEMPLAR O OCEANO É UM DOS PRAZERES DA VIDA! www.penzimoveis.com.br - 51 3626 3072 / 51 3626 1821 - 51 98536 3072 / 51 99978 8467</p>
           <div class="col">
@@ -270,7 +270,7 @@
           </div>
 
         </div>
-        <div class="col-6 mt-4">
+        <div class="col-12 col-md-6 mt-4">
           <h5 style="color:#1F2B43; font-size: 20px; font-weight:bold">Descrição</h5>
           <form>
             <div class="form-row">
